--- a/index.html
+++ b/index.html
@@ -2,64 +2,74 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Nunito+Sans&display=swap"
-        rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+  <meta name="description"
+    content="Descubri los increíbles paisajes de la Patagonia con Glaciar.ar. Ofrecemos tours guiados para que vivas una experiencia única en contacto con la naturaleza.">
 
-    <title>GLACIAR.AR || Agencia de Viajes en Patagonia </title>
+  <title>GLACIAR.AR || Agencia de Viajes en Patagonia </title>
+  <link rel="shortcut icon" href="./img/logo.jpg" type="image/x-icon">
 
 
 </head>
 
 <body>
-
+  <header>
     <!-- menu de navegación -->
-    <nav class="navbar navbar-expand-md navbar-light bg-primario">
-        <a class="navbar-brand" href="index.html"></a>
-        <div class="logo-glaciar"> <img src="img/logo.jpg" alt="Logo"></div>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light animate__animated animate__bounce">
+      <a class="navbar-brand" href="index.html"></a>
+      <div class="LogoGlaciar"> <img src="./img/logo.jpg" alt="Logo"></div>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/excursiones.html">Excursiones</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/excursiones.html">Excursiones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/experiencias.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
     </nav>
+  </header>
+  <main>
+    <h1>Preparate para vivir una aventura inolvidable con Glaciar.AR!</h1>
+    <h2>Explorá las bellezas naturales de la Patagonia con los mejores guías locales.</h2>
 
     <!-- fin menu navegación -->
     <!-- comienzo carrusel -->
-   <div class="micarru">
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" >
+    <div class="MiCarru">
+      <div id="carouselExampleSlidesOnly" class="carousel slide w-100 mx-auto" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block" src="img/carru_home/imagen1.png" alt="Primera slide">
+            <img class="d-block" src="./img/carru_home/imagen1.png" alt="Primera slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block" src="img/carru_home/imagen2.png" alt="Segunda slide">
+            <img class="d-block" src="./img/carru_home/imagen2.png" alt="Segunda slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block" src="img/carru_home/imagen3.png" alt="Tercera slide">
+            <img class="d-block" src="./img/carru_home/imagen3.png" alt="Tercera slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
@@ -72,18 +82,72 @@
         </a>
       </div>
     </div>
-      
-
     <!--fin carrusel-->
-
-
-    <div class="footer-container">
-        <p>Descubre la Patagonia con glaciar.ar. Todos los derechos reservados. Para más información haga click
-            <a>aquí</a></h2>
+    <h3>Conoce las mejores opciones para esta temporada!</h3>
+    <div class="accordion accordion-flush" id="accordionFlush">
+      <div class="accordion-item">
+        <h4 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            Navegaciones y actividades dentro del Parque Nacional los Glaciares!
+          </button>
+        </h4>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlush">
+          <div class="accordion-body">
+            <li><h5>Excursión al Glaciar Upsala:</h5> Esta excursión te lleva al majestuoso Glaciar Upsala, el segundo glaciar más grande de América del Sur. Podrás navegar por el Lago Argentino y disfrutar de las increíbles vistas panorámicas del glaciar.</li>
+            <li><h4>Mini Trekking sobre el Glaciar Perito Moreno:</h4> Si deseas vivir una experiencia única, puedes realizar un mini trekking sobre el Glaciar Perito Moreno. Con la ayuda de guías expertos, caminarás sobre el hielo y explorarás las impresionantes formaciones glaciares.</li>
+            <li><h4>Navegación por el Brazo Norte del Lago Argentino: </h4> Esta excursión en barco te llevará a través del Brazo Norte del Lago Argentino, donde podrás disfrutar de vistas panorámicas de varios glaciares, como el Spegazzini y el Seco.</li>
+            <li><h4>Safari Náutico por el Canal de los Témpanos: </h4>Durante este safari náutico, podrás navegar por el Canal de los Témpanos y admirar los enormes icebergs flotantes que se desprenden del Glaciar Upsala.</li>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h4 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            Tours y traslados del aeropuerto y el Parque Nacional
+          </button>
+        </h4>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlush">
+          <div class="accordion-body">
+            <li><h4>Traslados desde/hacia el aeropuerto:</h4>Frecuencia diaria al aeropuerto de El Calafate. También podés ir directo a El Chaltén!</li>
+            <li><h4>Tours al Glaciar Perito Moreno: </h4>Estos tours te llevan al icónico Glaciar Perito Moreno, donde podrás admirar su imponente belleza y escuchar los estruendos de los desprendimientos de hielo. Algunos tours incluyen caminatas sobre las pasarelas para tener una vista cercana del glaciar.</li>
+            <li><h4>Full Day a El Chaltén:</h4>una excursión de un día desde El Calafate que te lleva a la encantadora localidad de El Chaltén. Durante el tour, podrás disfrutar de hermosos paisajes, realizar senderismo en los senderos de montaña y maravillarte con vistas espectaculares, como el Cerro Fitz Roy. El tour generalmente incluye transporte de ida y vuelta desde El Calafate, tiempo libre para explorar y opciones de senderismo. Es recomendable consultar con agencias de viajes locales para obtener más información y reservar el tour según tus preferencias y necesidades.</li>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h4 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            Cabalgatas, kayaks y 4x4
+          </button>
+        </h4>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlush">
+          <div class="accordion-body">
+            <li><h4>Cabalgatas del Glaciar:</h4>Cabalgatas con guias locales en un lugar increíble dentro del Parque Nacional los Glaciares.</li>
+            <li><h4>Calafate Kayaks:</h4>Una navegación corta en el Lago Argentino con vistas únicas a El Calafate y sus cerros.</li>
+            <li><h4>Balcones de El Calafate 4x4 </h4>Subimos en un vehículo 4 x 4 hasta un punto panorámico. En la cima, encontramos una nueva vista de El Calafate y su entorno.</li>
+          </div>
+        </div>
+      </div>
     </div>
+
+  </main>
+  <footer>
+    <div class="FooterContainer">
+      <h4>Descubre la Patagonia con Glaciar.ar.</h4>
+      <p> los derechos reservados. Para más información haga click <a href="https://wa.me/2966658946"
+          target="_blank">aquí</a></p>
+
+    </div>
+  </footer>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </html>
