--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    <meta name="description" content="¿Querés saber más sobre nuestros tours en la Patagonia o tenés alguna duda sobre nuestra agencia de turismo? Contáctanos en Glaciar.ar y nuestro equipo te atenderá con gusto. Encontralos en esta página.">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <meta name="description" content="¿Querés saber lo que opinan los demás viajeros sobre Glaciar.AR? En nuestra página de opiniones vas a encontrar los comentarios y las valoraciones de nuestra gente sobre nuestras excursiones y servicios".>
     <meta name="keywords" content="Patagonia, Glaciares, Turismo, Naturaleza, Tours, Aventura, Trekking, Expediciones, Excursiones, Viajes, Argentina, Sudamérica, Actividades al aire libre, Ecoturismo">
   
-    <title>Ponete en contacto con nosotros! GLACIAR.AR || Agencia de Viajes en Patagonia </title>
+    <title>Experiencias de pasajeros que confiaron en GLACIAR.AR || Agencia de Viajes en Patagonia </title>
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
 
   
@@ -50,22 +50,21 @@
                 </li>
             </ul>
         </div>
-
     </nav>
 
     <!-- fin menu navegación -->
     <!-- comienzo formulario -->
     <h1>Contactese con nosotros</h1>
 
-    <div class="Contacto">
-        <div class="Boton">
+    <div class="contacto">
+        <div class="boton">
             <a href="https://wa.me/2966658946" target="_blank">Whatsapp</a>
         </div>
-        <div class="Boton">
+        <div class="boton">
 
             <a href="https://www.instagram.com" target="_blank">Instagram</a>
         </div>
-        <div class="Boton">
+        <div class="boton">
 
             <a href="https://www.tripadvisor.com.ar/" target="_blank">TripAdvisor</a>
         </div>
