--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,21 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Nunito+Sans&display=swap"
-        rel="stylesheet">
-
-
-    <title>GLACIAR.AR || Agencia de Viajes en Patagonia </title>
-
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <meta name="description" content="Conoce al equipo detrás de Glaciar.ar, una agencia de turismo en la Patagonia comprometida con ofrecer tours de alta calidad y en contacto con la naturaleza. Descubre nuestra pasión por la Patagonia y nuestro compromiso con el turismo sostenible.">
+    <meta name="keywords" content="Guias, trekking, Patagonia, Glaciares, Turismo, Naturaleza, Tours, Aventura, Expediciones, Excursiones, Viajes, Argentina, Sudamérica, Actividades al aire libre, Ecoturismo">
+  
+    <title>Nuestra pasión por la Patagonia || Glaciar.ar agencia de Viajes en Patagonia </title>
+    <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
+  </head>
 
 <body>
     <!-- menu de navegación -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light animate__animated animate__bounce">
         <a class="navbar-brand" href="index.html"></a>
-        <div class="logo-glaciar"> <img src="../img/logo.jpg" alt="Logo"></div>
+        <div class="LogoGlaciar"> <img src="../img/logo.jpg" alt="Logo"></div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,6 +42,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="experiencias.html">Experiencias</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -53,7 +57,7 @@
                 <h2>¡Bienvenidos a Glaciar.ar, la agencia de viajes que te lleva a descubrir los rincones más
                     espectaculares de la Patagonia Argentina!</h2>
             </div>
-            <div class="columnas">
+            <div class="Columnas">
                 <p>Somos una agencia de viajes especializada en ofrecer experiencias únicas en la Patagonia, con un
                     enfoque en los glaciares y la naturaleza impresionante de esta región del mundo. Ofrecemos una
                     amplia variedad de destinos y tours para que nuestros clientes puedan explorar la Patagonia de la
@@ -63,7 +67,7 @@
                     trabajamos en estrecha colaboración con nuestros clientes para planificar cada detalle de su viaje,
                     desde el transporte y el alojamiento hasta las actividades y excursiones que desean realizar.</p>
             </div>
-            <div class="columnas">
+            <div class="Columnas">
 
                 <p>Nuestro equipo está formado por guías turísticos locales y expertos en la Patagonia que conocen a
                     fondo cada destino y están comprometidos en ofrecer una experiencia auténtica y enriquecedora a
@@ -76,21 +80,23 @@
                 <p>¡Permítenos ayudarte a planear tu próximo viaje a la Patagonia Argentina! Contáctanos para comenzar a
                     planear la aventura de tus sueños con Glaciar.ar.</p>
             </div>
-            <div class="tarj-guias">
-                <div class="tarjetas"><img src="../img/staff/guia1.jpeg" alt="foto de guia 1"></div>
-                <div class="tarjetas"><img src="../img/staff/guia2.jpeg" alt="foto de guia 2"></div>
-                <div class="tarjetas"><img src="../img/staff/guia3.jpeg" alt="foto de guia 3"></div>
+            <div class="TarjetasGuias">
+                <div class="Tarjetas"><img src="../img/staff/guia1.jpeg" alt="foto de guia 1"></div>
+                <div class="Tarjetas"><img src="../img/staff/guia2.jpeg" alt="foto de guia 2"></div>
+                <div class="Tarjetas"><img src="../img/staff/guia3.jpeg" alt="foto de guia 3"></div>
             </div>
         </div>
 
     </main>
 
     <!--fin nosostros-->
-    <div class="footer-container">
-        <p>Descubre la Patagonia con glaciar.ar. Todos los derechos reservados. Para más información haga click <a
-                href="https://wa.me/2966658946" target="_blank">aquí</a></h2>
+    <footer>
+        <div class="FooterContainer">
+            <p>Descubre la Patagonia con glaciar.ar. Todos los derechos reservados. Para más información haga click <a
+                    href="https://wa.me/2966658946" target="_blank">aquí</a></h2>
 
-    </div>
+        </div>
+    </footer>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
