--- a/pages/excursiones.html
+++ b/pages/excursiones.html
@@ -7,99 +7,207 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Nunito+Sans&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <meta name="description"
+        content="Descubre la Patagonia con nuestros guías locales. En Glaciar.AR te ofrecemos una amplia selección de excursiones para que vivas experiencias únicas en contacto con la naturaleza.">
+    <meta name="keywords"
+        content="Patagonia, Glaciares, Turismo, Naturaleza, Tours, Aventura, Trekking, Expediciones, Excursiones, Viajes, Argentina, Sudamérica, Actividades al aire libre, Ecoturismo">
+    <title>Las mejores exursiones en GLACIAR.AR || Agencia de Viajes en Patagonia </title>
+    <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
 
-    <title>GLACIAR.AR || Agencia de Viajes en Patagonia </title>
+</head>
 
 </head>
 
 <body>
-    <!-- menu de navegación -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html"></a>
-        <div class="logo-glaciar"> <img src="../img/logo.jpg" alt="Logo"></div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="excursiones.html">Excursiones</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                </li>
-            </ul>
+    <header>
+        <!-- menu de navegación -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light animate__animated animate__bounce">
+            <a class="navbar-brand" href="../index.html"></a>
+            <div class="LogoGlaciar"> <img src="../img/logo.jpg" alt="Logo"></div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./excursiones.html">Excursiones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./experiencias.html">Experiencias</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="copete">
+            <h1>Estas son las excursiones más populares!</h1>
         </div>
-    </nav>
-    <div class="copete">
-        <h1>Descubre las excursiones que ofrecemos! </h1>
-
-
-    </div>
-    <!-- fin menu navegación -->
-    <!-- comienzo tarjetas -->
-    <div class="tarj-container">
-        <div class="tarjetas">
-            <div class="t-imagen">
-                <img src="../img/excursiones/gourmet1.png" alt="gourmet">
-                <div class="texto-encima">
-                    <h2>Viva la experiencia Gourmet </h2>
+        <!-- fin menu navegación -->
+        <!-- comienzo Tarjetas -->
+        <div class="TarjetasContainer">
+            <div class="Tarjetas">
+                <div class="TarjetasImagen">
+                    <img src="../img/excursiones/gourmet1.png" alt="gourmet">
+                    <div class="TextoEncima">
+                        <h2>Viva la experiencia Gourmet </h2>
+                    </div>
                 </div>
+            </div>
+            <div class="Tarjetas">
+                <div class="TarjetasImagen">
+                    <img src="../img/excursiones/todoglaciares1.png" alt="todo glaciares">
+                    <div class="TextoEncima">
+                        <h2>Navegue los glaciares de la zona</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="Tarjetas">
+                <div class="TarjetasImagen">
+                    <img src="../img/excursiones/trekking1.png" alt="trekking">
+                    <div class="TextoEncima">
+                        <h2>Camine sobre el Perito Moreno</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="Tarjetas">
+                <div class="TarjetasImagen">
+                    <img src="../img/excursiones/moreno1.png" alt="perito moreno">
+                    <div class="TextoEncima">
+                        <h2>Visite el glaciar más famoso del Parque Nacional</h2>
 
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="tarjetas">
-            <div class="t-imagen">
-                <img src="../img/excursiones/todoglaciares1.png" alt="todo glaciares">
-                <div class="texto-encima">
-                    <h2>Navegue los glaciares de la zona</h2>
+        <section>
+            <h2>Excursiones que no puede dejar de realizar en su visita a El Calafate </h2>
+            <h3>Haga click en el tipo de exursión para ver más información</h3>
+
+            <div class="accordion accordion-flush" id="accordionFlush">
+                <div class="accordion-item">
+                    <h4 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            Excursiones al Perito Moreno </button>
+                    </h4>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">Visite el glaciar más famoso del Parque Nacional.
+                            <li>Bus regular a Glaciar P. Moreno en bus con guía</li>
+                            <li>Trekking sobre Glaciar Perito Moreno.</li>
+                            <li>Experiencia </li>
+                            <li>Mirador de los Cóndores</li>
+                            <li></li>
+                        </div>
+                    </div>
                 </div>
+                <div class="accordion-item">
+                    <h4 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Excursiones en El Chaltén
+                        </button>
+                    </h4>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">Capital Nacional del trekking
+                            <li>Full day Chaltén</li>
+                            <li>Trekking a Laguna de los Tres</li>
+                            <li>Trekking a Lago Torre</li>
+                            <li>Mirador de los Cóndores</li>
+                            <li></li>
 
-            </div>
-        </div>
-        <div class="tarjetas">
-            <div class="t-imagen">
-                <img src="../img/excursiones/trekking1.png" alt="trekking">
-                <div class="texto-encima">
-                    <h2>Camine sobre el Perito Moreno</h2>
+                        </div>
+                    </div>
                 </div>
+                <div class="accordion accordion-flush" id="accordionFlush">
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                aria-controls="flush-collapseThree">
+                                Navegaciones dentro del Parque Nacional
+                            </button>
+                        </h4>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlush">
+                            <div class="accordion-body">Visite el glaciar más famoso del Parque Nacional.
+                                <li>Bus regular a Glaciar P. Moreno en bus con guía</li>
+                                <li>Trekking sobre Glaciar Perito Moreno.</li>
+                                <li>Experiencia </li>
+                                <li>Mirador de los Cóndores</li>
+                                <li></li>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h4 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                    aria-controls="flush-collapseFour">
+                                    Excursiones en kayaks
+                                </button>
+                            </h4>
+                            <div id="flush-collapseFour" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush">
+                                <div class="accordion-body">Visite el glaciar más famoso del Parque Nacional.
+                                    <li>Bus regular a Glaciar P. Moreno en bus con guía</li>
+                                    <li>Trekking sobre Glaciar Perito Moreno.</li>
+                                    <li>Experiencia </li>
+                                    <li>Mirador de los Cóndores</li>
+                                    <li></li>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h4 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseFive" aria-expanded="false"
+                                        aria-controls="flush-collapseFive">
+                                        Fuera del Parque Nacional
+                                    </button>
+                                </h4>
+                                <div id="flush-collapseFive" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionFlush">
+                                    <div class="accordion-body">Excursiones y posibilidades fuera del Parquen Nacional
+                                        <li>Cuevas de pinturas rupestres</li>
+                                        <li>Trekking sobre Glaciar Perito Moreno.</li>
+                                        <li>Experiencia </li>
+                                        <li>Mirador de los Cóndores</li>
+                                        <li></li>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-            </div>
+
+    </main>
+    <!--fin Tarjetas-->
+
+    <footer>
+        <div class="FooterContainer">
+            <p>Descubre la Patagonia con glaciar.ar. Todos los derechos reservados. Para más información haga click <a
+                    href="https://wa.me/2966658946" target="_blank">aquí</a></h2>
+
         </div>
-        <div class="tarjetas">
-            <div class="t-imagen">
-                <img src="../img/excursiones/moreno1.png" alt="perito moreno">
-                <div class="texto-encima">
-                    <h2>Visite el glaciar más famoso del Parque Nacional</h2>
-
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!--fin tarjetas-->
-
-
-    <div class="footer-container">
-        <p>Descubre la Patagonia con glaciar.ar. Todos los derechos reservados. Para más información haga click <a
-                href="https://wa.me/2966658946" target="_blank">aquí</a></h2>
-
-    </div>
+    </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </html>
