proy final typo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="./pages/contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/experiencias.html">Contacto</a>
+            <a class="nav-link" href="./pages/experiencias.html">Experiencias</a>
           </li>
         </ul>
       </div>
